--- a/podfile
+++ b/podfile
@@ -15,5 +15,6 @@ target 'Jungle' do
   pod 'Firebase/Firestore' 
   pod 'Texture'
   pod 'SwiftMessages'
+  pod 'AlgoliaSearch-Client-Swift'
   pod 'ScrollableGraphView', :git => 'https://github.com/barnaclejive/ScrollableGraphView', :branch => 'master'
 end
