--- a/podfile
+++ b/podfile
@@ -17,4 +17,5 @@ target 'Jungle' do
   pod 'SwiftMessages'
   pod 'AlgoliaSearch-Client-Swift'
   pod 'ScrollableGraphView', :git => 'https://github.com/barnaclejive/ScrollableGraphView', :branch => 'master'
+  pod "PromiseKit", "~> 6.0"
 end
