--- a/Jungle/Info.plist
+++ b/Jungle/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>For generating captions from your recorded videos.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>For recording audio in videos.</string>
 	<key>NSCameraUsageDescription</key>
